--- a/style.css
+++ b/style.css
@@ -194,19 +194,19 @@ header li a:hover {
   gap: 2rem;
 }
 
-.skill_tab img:nth-child(2) {
+.skill_tab img:nth-of-type(2) {
   transition-delay: 200ms;
 }
 
-.skill_tab img:nth-child(3) {
+.skill_tab img:nth-of-type(3) {
   transition-delay: 400ms;
 }
 
-.skill_tab img:nth-child(4) {
+.skill_tab img:nth-of-type(4) {
   transition-delay: 600ms;
 }
 
-.skill_tab img:nth-child(5) {
+.skill_tab img:nth-of-type(5) {
   transition-delay: 800ms;
 }
 
